--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       <label for="phone">Número de teléfono:</label>
       <div class="phone-input">
         <select id="countryCode">
-          <option value="+1" data-flag="us">🇺🇸 +1</option>
-          <option value="+56" data-flag="cl">🇨🇱 +56</option>
-          <option value="+51" data-flag="pe">🇵🇪 +51</option>
-          <option value="+52" data-flag="mx">🇲🇽 +52</option>
-          <option value="+57" data-flag="co">🇨🇴 +57</option>
-          <option value="+591" data-flag="bo">🇧🇴 +591</option>
-          <option value="+593" data-flag="ec">🇪🇨 +593</option>
-          <option value="+502" data-flag="gt">🇬🇹 +502</option>
-          <option value="+503" data-flag="sv">🇸🇻 +503</option>
-          <option value="+507" data-flag="pa">🇵🇦 +507</option>
+          <option value="+1 Estados Unidos"+1</option>
+          <option value="+56 Panama"+56</option>
+          <option value="+51 Peru"+51</option>
+          <option value="+52 Mexico"+52</option>
+          <option value="+57 Colombia"+57</option>
+          <option value="+591 Bolivia"+591</option>
+          <option value="+593 Ecuador"+593</option>
+          <option value="+502 Guatemala"+502</option>
+          <option value="+503 El salvador"+503</option>
+          <option value="+507 Panama"+507</option>
         </select>
         <input type="tel" id="phone" placeholder="Ingresa tu número de teléfono" required>
       </div>
