--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       }
 
       // Construye el mensaje
-      const message = `Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información de los productos.`;
+      const message = `Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información del negocio.`;
 
       // Envía un mensaje de WhatsApp al número especificado
       const whatsappUrl = `https://wa.me/573244473967?text=${encodeURIComponent(message)}`;
